--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="cookie.svg" type="image/icon type">
+    <link rel="icon" href="/cookie.svg" type="image/icon type">
 
     <title>First Cookie</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <div class="cookie-container">
         <!--This is a Cookie :-P-->
          <svg class="cookie" height="148px" width="148px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-56.32 -56.32 624.64 624.64" xml:space="preserve" fill="#000000" stroke="#000000" stroke-width="0.00512">
