--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </svg>
         <div class="text">
             <h2 class="cookie-title">My first Cookie Policy</h2>
-            <p class="cookie-subtitle">we need the cookies to sameld analistic data how easy they are to hack -little fun...my first cookie program <b>(yum)</b></p>
+            <p class="cookie-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laboriosam, dolor commodi libero, aliquam sunt possimus dicta aspernatur sit consectetur eum et dolores explicabo ipsa, non molestiae enim ab! Odio...my first cookie program <b>(yum)</b></p>
             <button><b>Okay</b>, got it...</button>
         </div>
 
